Added doc presence index for ner and pos